Fix flex alignment by setting align-items to start

--- a/style.css
+++ b/style.css
@@ -239,6 +239,7 @@
     /* || Layout */
     .populated {
         display: flex;
+        align-items: start;
         justify-content: center;
     }
     
